force-app/main/default/objects/Contact/fields/Clio_Id__c.field-meta.xml
<CustomField>
    <fullName>Clio_Id__c</fullName>
    <externalId>true</externalId>
    <label>Clio ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>