force-app/main/default/objects/Contact/fields/Clio_Type__c.field-meta.xml
<CustomField>
    <fullName>Clio_Type__c</fullName>
    <description>Contact type from Clio (Person or Company)</description>
    <label>Clio Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Person</fullName>
            </value>
            <value>
                <fullName>Company</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>