force-app/main/default/objects/Contact/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <description>Company name from Clio for company-type contacts</description>
    <label>Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>