force-app/main/default/objects/Contact/fields/Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type__c</fullName>
    <label>Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Administrative &amp; Support</fullName>
            </value>
            <value>
                <fullName>Arbitrator</fullName>
            </value>
            <value>
                <fullName>Authorized Representative</fullName>
            </value>
            <value>
                <fullName>Billing Contact</fullName>
            </value>
            <value>
                <fullName>Co-Client / Co-Petitioner</fullName>
            </value>
            <value>
                <fullName>Co-Counsel</fullName>
            </value>
            <value>
                <fullName>Court Clerk</fullName>
            </value>
            <value>
                <fullName>Emergency Contact</fullName>
            </value>
            <value>
                <fullName>Expert Witness</fullName>
            </value>
            <value>
                <fullName>Government Agency Contact</fullName>
            </value>
            <value>
                <fullName>Insurance Adjuster (Opposing)</fullName>
            </value>
            <value>
                <fullName>Intake Attorney</fullName>
            </value>
            <value>
                <fullName>Interpreter</fullName>
            </value>
            <value>
                <fullName>Investigator</fullName>
            </value>
            <value>
                <fullName>IT Support Contact</fullName>
            </value>
            <value>
                <fullName>Judge</fullName>
            </value>
            <value>
                <fullName>Legal Assistant</fullName>
            </value>
            <value>
                <fullName>Mediator</fullName>
            </value>
            <value>
                <fullName>Medical Provider</fullName>
            </value>
            <value>
                <fullName>Office Manager</fullName>
            </value>
            <value>
                <fullName>Opposing Counsel</fullName>
            </value>
            <value>
                <fullName>Opposing Law Firm</fullName>
            </value>
            <value>
                <fullName>Opposing Party</fullName>
            </value>
            <value>
                <fullName>Paralegal</fullName>
            </value>
            <value>
                <fullName>Parent / Guardian</fullName>
            </value>
            <value>
                <fullName>Power of Attorney</fullName>
            </value>
            <value>
                <fullName>Primary Client</fullName>
            </value>
            <value>
                <fullName>Process Server</fullName>
            </value>
            <value>
                <fullName>Records Custodian</fullName>
            </value>
            <value>
                <fullName>Responsible Attorney</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>